--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           </div>
           <div class="container">
             <h1 class="text-center">
-            Il Jae Lee <br>
-            <small>Student by Day, Hacker by Night.</small></h1>
+            Christopher Danhee Choi <br>
+            <small>University of Illinois Student</small></h1>
             <br>
             <p class="text-center">Hey there! <br>
             I'm a high school (Currently enrolled in Cranbrook Kingswood) developer working on projects that I hope one day will make the world a better place. <br>
