--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <small>University of Illinois Student</small></h1>
             <br>
             <p class="text-center">Hey there! <br>
-            I'm a high school (Currently enrolled in Cranbrook Kingswood) developer working on projects that I hope one day will make the world a better place. <br>
+            I'm a University of Illinois at Urbana-Champaign student.<br>
             This site is a place where I can show off my work and skills. <br>
-            If you have any questions at all, feel free to get in contact with me through <a href="mailto:smashthewindow@gmail.com">email</a>, <a href="https://www.facebook.com/smashthewindow">Facebook</a> or <a href="https://twitter.com/soda5_">Twitter</a>.</p>
+            If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi">Facebook</a> or <a href="https://twitter.com/soda5_">Twitter</a>.</p>
             <br>
           </div>
           <div class="container-fluid dark" id="about">
@@ -78,7 +78,7 @@
             <br>
           </div>
           <div class="container" id="projects">
-            <h2 class="text-center">Enough small talk, show me the code. <br>
+            <h2 class="text-center">Skills<br>
             <small>Now the fun part.</small></h2>
             <div class="row">
               <div class="col-sm-4 divider">
@@ -86,24 +86,16 @@
                 <ul>
                   <li>C/C++</li>
                   <li>Python</li>
-                  <li>Objective-C</li>
                   <li>Java</li>
                   <li>Javascript</li>
                   <li>HTML5</li>
-                  <li>Assembly</li>
                 </ul>
               </div>
               <div class="col-sm-4 divider">
                 <h4 class="text-center">Libraries</h4>
                 <ul>
-                  <li>Django</li>
                   <li>NodeJS</li>
-                  <li>AngularJS</li>
                   <li>Bootstrap</li>
-                  <li>PureCSS</li>
-                  <li>Cocos2D-x</li>
-                  <li>Leadwerks 2</li>
-                  <li>C4 Engine</li>
                 </ul>
               </div>
               <div class="col-sm-4">
@@ -244,7 +236,7 @@
             <h2 class="text-center">How smart are you?</h2>
             <p class="text-justify">I'm also fairly educated in academic disciplines as math and science. I feel its knowledge have helped me pursue my passion in computer science today. Below are a list of accomplishments in the field.</p>
             <ul>
-              <li>2013  MHacks  2013  Winter  (Hosted by  University  of  Michigan, Ann Arbor) placed  in  Top 10  for LEAP  Motion  Integration</li>
+              <li></li>
               <li>Scored  5.0 in  AP  Calculus  AB, AP  Physics B,  AP  Computer  Science</li>
               <li>Currently enrolled  in  AP  Chemistry and AP  Calculus  BC  classes,  with  excellent scores</li>
               <li>2012  AMC 10B (American Mathematics Competition)  1st in  school</li>
