--- a/index.html
+++ b/index.html
@@ -236,19 +236,10 @@
             <h2 class="text-center">How smart are you?</h2>
             <p class="text-justify">I'm also fairly educated in academic disciplines as math and science. I feel its knowledge have helped me pursue my passion in computer science today. Below are a list of accomplishments in the field.</p>
             <ul>
-              <li></li>
-              <li>Scored  5.0 in  AP  Calculus  AB, AP  Physics B,  AP  Computer  Science</li>
-              <li>Currently enrolled  in  AP  Chemistry and AP  Calculus  BC  classes,  with  excellent scores</li>
-              <li>2012  AMC 10B (American Mathematics Competition)  1st in  school</li>
-              <li>2013  AMC 10B (American Mathematics Competition)  1st in  school</li>
-              <li>2012  MMPC  (Michigan Math  Prize Competition)  79th  in  State</li>
-              <li>2013  MMPC  (Michigan Math  Prize Competition)  150th in  State</li>
-              <li>2012  Math  Field Day (Hosted by  University  of  Michigan, Flint)  Cranbrook Kingswood Representing  Team, 2nd in  State</li>
-              <li>2013  Math  Field Day (Hosted by  University  of  Michigan, Flint)  Cranbrook Kingswood Representing  Team, 2nd in  State</li>
-              <li>2014  Math  Field Day (Hosted by  University  of  Michigan, Flint)  Cranbrook Kingswood Representing  Team, 2nd in  State</li>
-              <li>2012  Michigan  Physics Olympiad  (Hosted by  University  of  Michigan, Ann Arbor)  2nd in  State</li>
-              <li>2013  Michigan  Physics Olympiad  (Hosted by  University  of  Michigan, Ann Arbor)  2nd in  State</li>
-              <li>2014  Michigan  Science Olympiad  Technical Problem Solving,  4th in  State</li>
+              <li>2011 Temple University Future of Computing IST Center Award &amp; Intern U Best High School Project Silver Award</li>
+              <li>2012 American Mathematics Competition 12 (AMC 12) Distinguished Honor Roll (Top 1% National)</li>
+              <li>2012 American Invitational Mathematics Examination (AIME) Qualifier</li>
+			  <li></li>
             </ul>
           </div><br>
           <div class="container-fluid dark" id="contacts">
