--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CraftedByJ</title>
+    <title>Christopher Danhee Choi Portfolio</title>
     <link href='//fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -44,35 +44,18 @@
             <p class="text-center">Hey there! <br>
             I'm a University of Illinois at Urbana-Champaign student.<br>
             This site is a place where I can show off my work and skills. <br>
-            If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi">Facebook</a> or <a href="https://twitter.com/soda5_">Twitter</a>.</p>
+            If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi">Facebook</a> or <a href="https://twitter.com/danhee1012">Twitter</a>.</p>
             <br>
           </div>
           <div class="container-fluid dark" id="about">
             <div class="container">
-              <h3 class="text-center">Who are you?</h3>
+              <h3 class="text-center">Education</h3>
               <p class="text-justify">
-              I'm a self-taught programmer interested in working in the technology-field (I call myself self-taught as I didn't receive any formal computer science education other than AP Computer Science, which was a joke). <br>
-              At its core, I'm a start-up nerd. I read TechCrunch, VentureBeat and HackerNews. I dream about starting my own start-up and selling it to a tech giant for millions. I code in my free time, working on projects which others will laugh at, but I feel so confident it can change the world.
+              
               </p><br>
+              <h3 class="text-center">Activities</h3>
               <p class="text-justify">
-              Although I like to stay humble, I feel that I must point out that I'm by no means a beginner when it comes to programming. <br>
-              My continual interest in the computer science field over the years and countless hours of programming, learning and researching have allowed me to develop the skills comparable to a programmer working in the industry. (So give me an internship... and maybe I can prove it to you? :))
-              </p><br>
-              <h3 class="text-center">What's your story?</h3>
-              <p class="text-justify">
-              In my early days, I used to be crazy about video games. I used to stay up all night playing them, discuss them with my friends at school, and be completely obsessed with gaming competitions. And one day, for some reason I've got this really interesting idea; <em>What if I create my own video game?</em> How hard can it be, its not rocket science right?<br>
-              So on a cold Winter day of 2010, I went to the Harvard bookstore (long story how I ended up in Boston) and grabbed a copy of <em>Ivor Horton's Beginning Visual C++ 2010</em> - thus began my long journey to learn programming.</p><br>
-              <p class="text-justify">
-              Little did I know, there was (and still is) a tremendous amount of various 3D matrix, physics and algorithms knowledge required to create a proper video game. The advanced math classes that my Asian parents forced me to take in preparation for various math and science competitions (which, looking back, I thank them a lot - not only did I perform well on the competitions, I had no problem going through any math or science class in school after that) helped a bit, but there was still tremendous amount of learning that had to be done. So I bought books after books, learning linked lists, red-black trees, binary search, hashing algorithms and the sort.</p><br>
-              <p class="text-justify">
-              But the more I learned about these algorithms, I became more obsessed with using my knowledge to help solve problems that exists today rather than making a video game. We're able to send more safer emails thanks to SHA encryption algorithms. MP3 files are possible due to development of advanced compression methods. Siri or IBM's Watson are possible due to maching learning technologies. And that's where I stand today - I too wish to develop technologies that can solve the world's problems.
-              </p><br>
-              <h3 class="text-center">Where will you go from here?</h3>
-              <p class="text-justify">
-              Well, at the time of writing (1395426613 in UNIX Timestamp) would be to get into college. Sure, I have bigger ambitions that getting into a good college, but getting into a college seems to be the most logical step to take in order to achieve that goal. That means working hard on maintaining my GPA, preparing for ACTs, taking SATs and AP tests. However, I also like to focus on improving in my field of interest. Lately, I've been meeting up with the founders of small and big startups in Korea. It was an eye-opening experience, learning about their day-to-day life. Also, as my interest currently resides in machine learning and making computers to think more like humans, I've enrolled in a three week course at Coursera on maching learning.
-              </p><br>
-              <p class="text-justify">
-              Who knows - maybe in ten years, I would have made it to the front page of TechCrunch. Keep an eye out for my name.
+              
               </p>
             </div>
             <br>
@@ -101,11 +84,8 @@
               <div class="col-sm-4">
                 <h4 class="text-center">What else?</h4>
                 <ul>
-                  <li>Has excellent skills in debugging.</li>
-                  <li>Has experience in reverse-engineering and bypassing anti-reversing measures.</li>
-                  <li>Excellent communicator in English and Korean.</li>
-                  <li>As you can see from this portfolio, has a sense of design.</li>
-                  <li>Ability to use Microsoft Paint. :)</li>
+                  <li>Bilingual: Korean and English</li>
+                  <li>Programs: Adobe Photoshop</li>
                 </ul>
               </div>
             </div>
@@ -245,7 +225,7 @@
           <div class="container-fluid dark" id="contacts">
             <div class="container">
               <h3 class="text-center">Well, I need to contact you right now! <br>
-              <small>Perfect! Feel free to contact me through <a href="mailto:smashthewindow@gmail.com">email</a> or through any of the methods below.</small></h3>
+              <small>Perfect! Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3>
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
@@ -254,17 +234,12 @@
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://www.facebook.com/smashthewindow"><i class="fa fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/christopher.d.choi"><i class="fa fa-facebook-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://github.com/smashthewindow"><i class="fa fa-github-square"></i></a>
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <div class="contact-btn">
-                    <a href="https://plus.google.com/u/0/108575552433989918665"><i class="fa fa-google-plus-square"></i></a>
+                    <a href="https://github.com/danhee1012"><i class="fa fa-github-square"></i></a>
                   </div>
                 </div>
               </div> <br>
@@ -275,9 +250,7 @@
 
       <div id="footer">
         <div class="container">
-          <p class="text-center">Crafted with <i class="fa fa-heart"></i> in Seoul. <br>
-          Site by <a href="https://twitter.com/soda5_">@soda5_</a>. <br>
-          Source code is available <a href="https://github.com/smashthewindow/smashthewindow.github.io">here</a>.</p>
+          <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
         </div>
       </div>
 
