--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
                     <a href="https://github.com/danhee1012"><i class="fa fa-github-square"></i></a>
                   </div>
                 </div>
+				<div class="col-md-3">
+                  <div class="contact-btn">
+                    <a href="https://plus.google.com/101247220040337548201"><i class="fa fa-google-plus-square"></i></a>
+                  </div>
+                </div>
               </div> <br>
             </div>
           </div>
