--- a/index.html
+++ b/index.html
@@ -100,118 +100,14 @@
                     <img src="/craneshout.png" alt="" class="proj-img">
                     </a>
                     <div class="collapse" id="craneshout">
-                      <h4>CraneShout</h4>
-                      <p class="text-justify">Anonymous secret sharing service for Cranbrook Kingswood students.
-                      The service is exclusive to students - parents, faculty or alumni cannot get access.</p>
-                      <p>Technologies used: Django, Celery, RabbitMQ, PostgreSQL</p>
+                      <h4>Lusication</h4>
+                      <p class="text-justify"></p>
+                      <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
                       <p><a href="https://www.craneshout.com">Visit</a></p>
                     </div>
                   </div>
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#readly">
-                    <img src="/readly.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="readly">
-                      <h4>Readly.IO</h4>
-                      <p class="text-justify">A Twitter article reminder service that I've designed, coded, and launched all within 7 days. When a user tweets a link or an article, it is sent to Readly.IO and an reminder email with the link and a short summary of the article is sent to the user.</p>
-                      <p>Technologies used: NodeJS, Redis, MongoDB</p>
-                      <p><a href="https://github.com/smashthewindow/Readly.io">GitHub</a></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#whitebox">
-                    <img src="/whitebox.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="whitebox">
-                      <h4>WhiteBox</h4>
-                      <p class="text-justify">A weekend hack I made where it answers a user's questions.
-                      User may ask a question, which then the natural language parser processes the question to build an MQL Query.
-                      The query is then passed into Freebase to find the answer.
-                      Heavily inspired by Wolfram Alpha. </p>
-                      <p>Technologies used: Flask</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#segment">
-                    <img src="/segment.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="segment">
-                      <h4>Segment</h4>
-                      <p class="text-justify">Bored during summer break, I've made Segment game.
-                      The gameplay is a clone of the IGF Winner <a href="http://perfectiongame.net/">Perfection</a>.
-                      I've basically cloned the whole game in a matter of 7 days - the length of my stay at Samsung Medical Hospital for a surgery.</p>
-                      <p>Technologies used: Cocos2D-x, Python</p>
-                      <p><a href="https://github.com/smashthewindow/segments">GitHub</a> / <a href="http://youtu.be/BtLpXtQa75Y">Gameplay Video</a></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+               </div>   
             </div>
-            <div class="row">
-              <div class="col-md-6 col-sm-12">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#qmark">
-                    <img src="/qmark.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="qmark">
-                      <h4>QMark</h4>
-                      <p class="text-justify">A hack I've made at the 2nd MHacks.
-                      After being fed up with managing bookmarks thousands of bookmarks, I've decided to build a better way to manage them.
-                      When a user registers a bookmark, QMark automatically scans the page for the most important keywords and phrases.
-                      Then a user may search his bookmarks through related terms of keywords.</p>
-                      <p>Technologies used: Django</p>
-                      <p><a href="https://github.com/smashthewindow/QuickMarks">GitHub</a></p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#gimmeglasses">
-                    <img src="/glasses.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="gimmeglasses">
-                      <h4>GimmeGlasses</h4>
-                      <p class="text-justify">A site I've launched after a weekend of hacking, where a user may upload a selfie, then the serverside logic detects the face and places glasses on their face.
-                      This was my first web project, and I've learnt a lot about web programming and server management. </p>
-                      <p>Technologies used: Django, OpenCV</p>
-                      <p><a href="http://gimmeglasses-sinabro.rhcloud.com/">Site</a></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#mcs">
-                    <img src="/mcs.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="mcs">
-                      <h4>moon.chase.star</h4>
-                      <p class="text-justify">A rapid game I've developed over a period of 4 months.
-                      In order to meet the development schedule, I've also cut down on some of the features I had in mind, simplified the whole art asset by switching from 3D to 2D, and chosen a mono-color theme.
-                      I've also built LEAP Motion controller integration for the first MHacks 2013, and placed in the top 10.</p>
-                      <p>Technologies used: SFML, Python</p>
-                      <p><a href="https://github.com/smashthewindow/moon.chase.star">GitHub</a> / <a href="http://www.desura.com/games/moonchasestar">Desura</a></p>
-                    </div>
-                  </div>
-                  <div class="col-sm-6">
-                    <a data-toggle="collapse" data-target="#rnr">
-                    <img src="/rnr.png" alt="" class="proj-img">
-                    </a>
-                    <div class="collapse" id="rnr">
-                      <h4>Round & Round</h4>
-                      <p class="text-justify">Round & Round was the first video game I've ever attempted to create.
-                      Over-ambitious and not very well planned out, the project did not see completion. Nevertheless, I value the experience as it has taught me a lot about programming and project management in general, and most importantly I had tones of fun in the process. </p>
-                      <p>Technologies used: SFML, Python</p>
-                      <p><a href="http://youtu.be/mG2JfMmGr04">WIP Demo</a> / <a href="http://youtu.be/HaaTUSG2ZYg">Tech Demo</a></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              
             </div>
             <h2 class="text-center">How smart are you?</h2>
             <p class="text-justify">I'm also fairly educated in academic disciplines as math and science. I feel its knowledge have helped me pursue my passion in computer science today. Below are a list of accomplishments in the field.</p>
