--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <a data-toggle="collapse" data-target="#craneshout">
-                    <img src="/craneshout.png" alt="" class="proj-img">
+                    <img src="/lusication.png" alt="" class="proj-img">
                     </a>
                     <div class="collapse" id="craneshout">
                       <h4>Lusication</h4>
