--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="container">
               <h3 class="text-center">Education</h3>
               <p class="text-justify">
-              
+              	<>
               </p><br>
               <h3 class="text-center">Activities</h3>
               <p class="text-justify">
@@ -61,8 +61,7 @@
             <br>
           </div>
           <div class="container" id="projects">
-            <h2 class="text-center">Skills<br>
-            <small>Now the fun part.</small></h2>
+            <h2 class="text-center">Skills<br></h2>
             <div class="row">
               <div class="col-sm-4 divider">
                 <h4 class="text-center">Languages</h4>
@@ -90,7 +89,7 @@
               </div>
             </div>
             <br>
-            <h2 class="text-center">You really know all that stuff? Prove it!</h2>
+            <h2 class="text-center">What I have done.</h2>
             <h5 class="text-center">Click the images to view descriptions.</h5>
             <div class="row">
               <div class="col-md-6 col-sm-12">
@@ -101,27 +100,29 @@
                     </a>
                     <div class="collapse" id="craneshout">
                       <h4>Lusication</h4>
-                      <p class="text-justify"></p>
+                      <p class="text-justify">My friend and I made a web service for spring 2014 Hackillinois called Lusication . Lusication is a location-based music sharing network service. Lusication provides the songs your neigbors are listening to.</p>
                       <p>Technologies used: HTML, CSS Javascript, JQuery, Firebase, Rdio</p>
-                      <p><a href="https://www.craneshout.com">Visit</a></p>
+                      <p><a href="http://swha0901.github.io/Lusication/">Visit</a></p>
                     </div>
                   </div>
                </div>   
             </div>
             </div>
-            <h2 class="text-center">How smart are you?</h2>
-            <p class="text-justify">I'm also fairly educated in academic disciplines as math and science. I feel its knowledge have helped me pursue my passion in computer science today. Below are a list of accomplishments in the field.</p>
+            <h2 class="text-center">Honors / Awards</h2>
+            
             <ul>
               <li>2011 Temple University Future of Computing IST Center Award &amp; Intern U Best High School Project Silver Award</li>
               <li>2012 American Mathematics Competition 12 (AMC 12) Distinguished Honor Roll (Top 1% National)</li>
               <li>2012 American Invitational Mathematics Examination (AIME) Qualifier</li>
-			  <li></li>
+			  <li>2010 Governor Honors for First Place for the KSEA National Math Competition (Governor Edward G. Rendell)</li>
+			  <li>2010 KSEA National Math Competition 9th Grade First Place in Philadelphia Chapter</li>
+			  <li>2014 Spring Hackillinois Participation</li>
             </ul>
           </div><br>
           <div class="container-fluid dark" id="contacts">
             <div class="container">
-              <h3 class="text-center">Well, I need to contact you right now! <br>
-              <small>Perfect! Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3>
+              <h3 class="text-center">Contacts<br>
+              <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3>
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
