--- a/index.html
+++ b/index.html
@@ -50,13 +50,24 @@
           <div class="container-fluid dark" id="about">
             <div class="container">
               <h3 class="text-center">Education</h3>
-              <p class="text-justify">
-              	<>
+              <p class="text-justify"><b>Springfield Township High School</b>
+              </p><br>
+			  <p class="text-justify"><i>Graduated 2013</i>
+              </p><br>
+			  <p class="text-justify"><b>University of Illinois at Urbana-Champaign</b>
+              </p><br>
+			  <p class="text-justify"><i>Department of General Studies</i>
               </p><br>
               <h3 class="text-center">Activities</h3>
-              <p class="text-justify">
-              
-              </p>
+              <p class="text-justify"><b>High School Academic Competition Team</b>
+              </p><br>
+			  <p class="text-justify"><i>President / Team Captain (September 2010 - May 2013)</i>
+				<p class="text-justify"><b>High School JV/Varsity Boy’s Tennis Team</b>
+              </p><br>
+			  <p class="text-justify"><i>2nd Double Player (September 2011 - May 2013)</i>  
+				  <p class="text-justify"><b>Korean United Church of Philadelphia Korean School</b>
+              </p><br>
+			  <p class="text-justify"><i>Teacher’s Assistant (September 2010 - May 2013)</i>  
             </div>
             <br>
           </div>
