--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
           <div class="container-fluid dark" id="about">
             <div class="container">
               <h3 class="text-center">Education</h3>
-              <h4 class="text-center"><b>Springfield Township High School</b>
+              <h4 class="text-center">Springfield Township High School
               </h4>
 			  <p class="text-justify"><i>Graduated 2013</i>
               </p>
-			  <h4 class="text-center"><b>University of Illinois at Urbana-Champaign</b>
+			  <h4 class="text-center">University of Illinois at Urbana-Champaign
               </h4>
 			  <p class="text-justify"><i>Department of General Studies</i>
               </p>
               <h3 class="text-center">Activities</h3>
-              <h4 class="text-center"><b>High School Academic Competition Team</b>
+              <h4 class="text-center">High School Academic Competition Team
               </h4>
 			  <p class="text-justify"><i>President / Team Captain (September 2010 - May 2013)</i>
-				<h4 class="text-center"><b>High School JV/Varsity Boy’s Tennis Team</b>
+				<h4 class="text-center">High School JV/Varsity Boy’s Tennis Team
               </h4>
 			  <p class="text-justify"><i>2nd Double Player (September 2011 - May 2013)</i>  
-				  <h4 class="text-center"><b>Korean United Church of Philadelphia Korean School</b>
+				  <h4 class="text-center">Korean United Church of Philadelphia Korean School
               </h4>
 			  <p class="text-justify"><i>Teacher’s Assistant (September 2010 - May 2013)</i>  
             </div>
@@ -163,7 +163,7 @@
 
       <div id="footer">
         <div class="container">
-          <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
+          <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
         </div>
       </div>
 
