--- a/index.html
+++ b/index.html
@@ -52,22 +52,35 @@
               <h3 class="text-center">Education</h3>
               <h4 class="text-center">Springfield Township High School
               </h4>
-			  <p class="text-justify"><i>Graduated 2013</i>
-              </p>
+			  <ul>
+                  <li>Graduated 2013</li>
+                  <li>Cumulative GPA: 4.24/4.00</li>
+              </ul>
 			  <h4 class="text-center">University of Illinois at Urbana-Champaign
               </h4>
-			  <p class="text-justify"><i>Department of General Studies</i>
-              </p>
+			  <ul>
+                  <li>Department of General Studies</li>
+                  <li>Overall GPA: 3.75</li>
+              </ul>
               <h3 class="text-center">Activities</h3>
               <h4 class="text-center">High School Academic Competition Team
               </h4>
-			  <p class="text-justify"><i>President / Team Captain (September 2010 - May 2013)</i>
+			  <ul>
+                  <li>President / Team Captain</li>
+                  <li>September 2010 - May 2013</li>
+              </ul>
 				<h4 class="text-center">High School JV/Varsity Boy’s Tennis Team
               </h4>
-			  <p class="text-justify"><i>2nd Double Player (September 2011 - May 2013)</i>  
-				  <h4 class="text-center">Korean United Church of Philadelphia Korean School
+			  <ul>
+                  <li>2nd Double Player</li>
+                  <li>September 2011 - May 2013</li>
+              </ul>  
+			  <h4 class="text-center">Korean United Church of Philadelphia Korean School
               </h4>
-			  <p class="text-justify"><i>Teacher’s Assistant (September 2010 - May 2013)</i>  
+			  <ul>
+                  <li>Teacher’s Assistant</li>
+                  <li>September 2010 - May 2013</li>
+              </ul>  
             </div>
             <br>
           </div>
