--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="container-fluid dark" id="about">
             <div class="container">
               <h3 class="text-center">Education</h3>
-              <h4 class="text-center">Springfield Township High School
+              <h4>Springfield Township High School
               </h4>
 			  <ul>
                   <li>Graduated 2013</li>
