--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
                   <li>Graduated 2013</li>
                   <li>Cumulative GPA: 4.24/4.00</li>
               </ul>
-			  <h4 class="text-center">University of Illinois at Urbana-Champaign
+			  <h4>University of Illinois at Urbana-Champaign
               </h4>
 			  <ul>
                   <li>Department of General Studies</li>
                   <li>Overall GPA: 3.75</li>
               </ul>
               <h3 class="text-center">Activities</h3>
-              <h4 class="text-center">High School Academic Competition Team
+              <h4>High School Academic Competition Team
               </h4>
 			  <ul>
                   <li>President / Team Captain</li>
                   <li>September 2010 - May 2013</li>
               </ul>
-				<h4 class="text-center">High School JV/Varsity Boy’s Tennis Team
+				<h4>High School JV/Varsity Boy’s Tennis Team
               </h4>
 			  <ul>
                   <li>2nd Double Player</li>
                   <li>September 2011 - May 2013</li>
               </ul>  
-			  <h4 class="text-center">Korean United Church of Philadelphia Korean School
+			  <h4>Korean United Church of Philadelphia Korean School
               </h4>
 			  <ul>
                   <li>Teacher’s Assistant</li>
@@ -132,6 +132,12 @@
                </div>   
             </div>
             </div>
+			<br>
+			  <br>
+			  <br>
+			  <br>
+			  <br>
+			  <br>
             <h2 class="text-center">Honors / Awards</h2>
             
             <ul>
