--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="container-fluid dark" id="about">
             <div class="container">
-              <h3 class="text-center">Education</h3>
+              <h3 class="text-center">Education</h3><br>
               <h4>Springfield Township High School
               </h4>
 			  <ul>
@@ -62,7 +62,7 @@
                   <li>Department of General Studies</li>
                   <li>Overall GPA: 3.75</li>
               </ul>
-              <h3 class="text-center">Activities</h3>
+              <h3 class="text-center">Activities</h3><br>
               <h4>High School Academic Competition Team
               </h4>
 			  <ul>
@@ -113,7 +113,7 @@
               </div>
             </div>
             <br>
-            <h2 class="text-center">What I have done.</h2>
+            <h2 class="text-center">What I have done.</h2><br>
             <h5 class="text-center">Click the images to view descriptions.</h5>
             <div class="row">
               <div class="col-md-6 col-sm-12">
@@ -136,10 +136,8 @@
 			  <br>
 			  <br>
 			  <br>
-			  <br>
-			  <br>
             <h2 class="text-center">Honors / Awards</h2>
-            
+            <br>
             <ul>
               <li>2011 Temple University Future of Computing IST Center Award &amp; Intern U Best High School Project Silver Award</li>
               <li>2012 American Mathematics Competition 12 (AMC 12) Distinguished Honor Roll (Top 1% National)</li>
@@ -151,12 +149,12 @@
           </div><br>
           <div class="container-fluid dark" id="contacts">
             <div class="container">
-              <h3 class="text-center">Contacts<br>
+              <h3 class="text-center">Contacts<br><br>
               <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3>
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://twitter.com/soda5_"><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://twitter.com/danhee1012"><i class="fa fa-twitter-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
