--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="container-fluid dark" id="about">
             <div class="container">
-              <h3 class="text-center">Education</h3><br>
+              <h3 class="text-center">Education</h3>
               <h4>Springfield Township High School
               </h4>
 			  <ul>
@@ -62,7 +62,7 @@
                   <li>Department of General Studies</li>
                   <li>Overall GPA: 3.75</li>
               </ul>
-              <h3 class="text-center">Activities</h3><br>
+              <h3 class="text-center">Activities</h3>
               <h4>High School Academic Competition Team
               </h4>
 			  <ul>
@@ -135,7 +135,6 @@
 			<br>
 			  <br>
 			  <br>
-			  <br>
             <h2 class="text-center">Honors / Awards</h2>
             <br>
             <ul>
@@ -150,7 +149,7 @@
           <div class="container-fluid dark" id="contacts">
             <div class="container">
               <h3 class="text-center">Contacts<br><br>
-              <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3>
+              <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3><br>
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
@@ -177,7 +176,7 @@
           </div>
         </div>
       </div>
-
+<br>
       <div id="footer">
         <div class="container">
           <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
