--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			  <li>2010 KSEA National Math Competition 9th Grade First Place in Philadelphia Chapter</li>
 			  <li>2014 Spring Hackillinois Participation</li>
             </ul>
-          </div><br>
+          </div><br><br><br>
           <div class="container-fluid dark" id="contacts">
             <div class="container">
               <h3 class="text-center">Contacts<br><br>
@@ -176,11 +176,9 @@
           </div>
         </div>
       </div>
-<br><br><br>
+<br>
       <div id="footer">
         <div class="container">
-			<br>
-			<br>
           <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
         </div>
       </div>
