--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <br>
             <h2 class="text-center">What I have done.</h2><br>
-            <h5 class="text-center">Click the images to view descriptions.</h5>
+            <h5 class="text-center">Click the images to view descriptions.</h5><br>
             <div class="row">
               <div class="col-md-6 col-sm-12">
                 <div class="row">
