--- a/index.html
+++ b/index.html
@@ -171,12 +171,11 @@
                     <a href="https://plus.google.com/101247220040337548201"><i class="fa fa-google-plus-square"></i></a>
                   </div>
                 </div>
-              </div> <br>
+              </div> <br><br><br>
             </div>
           </div>
         </div>
       </div>
-<br><br>
       <div id="footer">
         <div class="container">
           <p class = "text-center">Sites by <a href="https://twitter.com/danhee1012">@danhee1012</a>. <br></p>
