--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
             </div>
             <br>
-            <h2 class="text-center">What I have done.</h2><br>
+            <h2 class="text-center">What I have done.</h2>
             <h5 class="text-center">Click the images to view descriptions.</h5><br>
             <div class="row">
               <div class="col-md-6 col-sm-12">
@@ -171,7 +171,7 @@
                     <a href="https://plus.google.com/101247220040337548201"><i class="fa fa-google-plus-square"></i></a>
                   </div>
                 </div>
-              </div> <br><br><br>
+              </div> <br><br><br><br>
             </div>
           </div>
         </div>
