--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="container-fluid dark" id="contacts">
             <div class="container">
               <h3 class="text-center">Contacts<br><br>
-              <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3><br>
+              <small>Feel free to contact me through <a href="mailto:danhee1012@gmail.com">email</a> or through any of the methods below.</small></h3><br><br>
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
@@ -171,7 +171,7 @@
                     <a href="https://plus.google.com/101247220040337548201"><i class="fa fa-google-plus-square"></i></a>
                   </div>
                 </div>
-              </div> <br><br><br><br>
+              </div> <br><br><br>
             </div>
           </div>
         </div>
