--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <small>University of Illinois Student</small></h1>
             <br>
             <p class="text-center">Hey there! <br>
-            I'm a University of Illinois at Urbana-Champaign student.<br>
+            I'm an University of Illinois at Urbana-Champaign student.<br>
             This site is a place where I can show off my work and skills. <br>
             If you have any questions at all, feel free to get in contact with me through <a href="mailto:danhee1012@gmail.com">email</a>, <a href="https://www.facebook.com/christopher.d.choi">Facebook</a> or <a href="https://twitter.com/danhee1012">Twitter</a>.</p>
             <br>
@@ -60,7 +60,7 @@
               </h4>
 			  <ul>
                   <li>Department of General Studies</li>
-                  <li>Overall GPA: 3.75</li>
+                  <li>Overall GPA: 3.75/4.00</li>
               </ul>
               <h3 class="text-center">Activities</h3>
               <h4>High School Academic Competition Team
