--- a/index.html
+++ b/index.html
@@ -153,22 +153,22 @@
               <div class="row">
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://twitter.com/danhee1012"><i class="fa fa-twitter-square"></i></a>
+                    <a href="https://twitter.com/danhee1012" target=_blank><i class="fa fa-twitter-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://www.facebook.com/christopher.d.choi"><i class="fa fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/christopher.d.choi" target=_blank><i class="fa fa-facebook-square"></i></a>
                   </div>
                 </div>
                 <div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://github.com/danhee1012"><i class="fa fa-github-square"></i></a>
+                    <a href="https://github.com/danhee1012" target=_blank><i class="fa fa-github-square"></i></a>
                   </div>
                 </div>
 				<div class="col-md-3">
                   <div class="contact-btn">
-                    <a href="https://plus.google.com/101247220040337548201"><i class="fa fa-google-plus-square"></i></a>
+                    <a href="https://plus.google.com/101247220040337548201" target=_blank><i class="fa fa-google-plus-square"></i></a>
                   </div>
                 </div>
               </div> <br><br><br>
