--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			  <h4>University of Illinois at Urbana-Champaign
               </h4>
 			  <ul>
-                  <li>Department of General Studies</li>
+                  <li>Division of General Studies</li>
                   <li>Overall GPA: 3.75/4.00</li>
               </ul>
               <h3 class="text-center">Activities</h3>
